crates/pandalang/src/eval/snapshots/pandalang__eval__tests__evals_exprs@if__if_false.panda.snap
---
source: crates/pandalang/src/eval/mod.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/if/if_false.panda
---
Ok(
    Int(
        Int {
            n: 0,
        },
    ),
)
