crates/pandalang/src/eval/snapshots/pandalang__eval__tests__evals_exprs@if__if_let.panda.snap
---
source: crates/pandalang/src/eval/mod.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/if/if_let.panda
---
Ok(
    Int(
        Int {
            n: 1,
        },
    ),
)
