crates/pandalang/src/eval/snapshots/pandalang__eval__tests__evals_exprs@if__let_if.panda.snap
---
source: crates/pandalang/src/eval/mod.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/if/let_if.panda
---
Ok(
    Int(
        Int {
            n: 1,
        },
    ),
)
